--- a/NLP_Assignment_1_21CS30032/trail.ipynb
+++ b/NLP_Assignment_1_21CS30032/trail.ipynb
@@ -64,7 +64,8 @@
     "print(tagged_words[:40])\n",
     "# show all the distinct tags\n",
     "tags = set([tag for word, tag in tagged_words])\n",
-    "print(tags)"
+    "print(tags)\n",
+    "n_tags = len(tags)"
    ]
   },
   {
@@ -72,6 +73,7 @@
    "metadata": {},
    "source": [
     "The tags we plan to use are \n",
+    "- start\n",
     "- NN (Noun) {All forms of Noun are represented by NN}\n",
     "- VB (Verb) {All forms of Verb are represented by VB}\n",
     "- JJ (Adjective) {All forms of Adjective are represented by JJ}\n",
@@ -88,27 +90,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict = {'NN':0 , 'VB':1 , 'JJ':2 , 'RB':3 , 'TO':4 , 'DT':5 , 'PRP':6 ,'other':7}\n",
-    "def get_tag(tag):\n",
-    "    if tag.startswith('NN'):\n",
-    "        return dict['NN']\n",
-    "    elif tag.startswith('VB'):\n",
-    "        return dict['VB']\n",
-    "    elif tag.startswith('JJ'):\n",
-    "        return dict['JJ']\n",
-    "    elif tag.startswith('RB'):\n",
-    "        return dict['RB']\n",
-    "    elif tag.startswith('TO'):\n",
-    "        return dict['TO']\n",
-    "    elif tag.startswith('DT'):\n",
-    "        return dict['DT']\n",
-    "    elif tag.startswith('PRP'):\n",
-    "        return dict['PRP']\n",
-    "    else:\n",
-    "        return dict['other']\n",
+    "# dict = {'start':0 ,'NN':1 , 'VB':2 , 'JJ':3 , 'RB':4 , 'TO':5 , 'DT':6 , 'PRP':7 ,'other':8}\n",
+    "# def get_tag(tag):\n",
+    "#     if tag.startswith('NN'):\n",
+    "#         return dict['NN']\n",
+    "#     elif tag.startswith('VB'):\n",
+    "#         return dict['VB']\n",
+    "#     elif tag.startswith('JJ'):\n",
+    "#         return dict['JJ']\n",
+    "#     elif tag.startswith('RB'):\n",
+    "#         return dict['RB']\n",
+    "#     elif tag.startswith('TO'):\n",
+    "#         return dict['TO']\n",
+    "#     elif tag.startswith('DT'):\n",
+    "#         return dict['DT']\n",
+    "#     elif tag.startswith('PRP'):\n",
+    "#         return dict['PRP']\n",
+    "#     else:\n",
+    "#         return dict['other']\n",
     "\n",
-    "tagged_words = [(word, get_tag(tag)) for word, tag in tagged_words]\n",
-    "print(tagged_words[:40])"
+    "# tagged_words = [(word, get_tag(tag)) for word, tag in tagged_words]\n",
+    "# print(tagged_words[:40])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict = {tag:i for i, tag in enumerate(tags)}"
    ]
   },
   {
@@ -118,7 +129,6 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "n_tags = 8\n",
     "n_words = len(set(corpus))\n",
     "word_to_index = {word: i for i, word in enumerate(set(corpus))}\n",
     "emission_matrix = np.zeros((n_tags, n_words+1))\n",
@@ -139,7 +149,7 @@
     "emission_matrix = np.log(emission_matrix + 1) - np.log(tag_counts.reshape(-1, 1) + n_words)\n",
     "transition_matrix = np.log(transition_matrix + 1) - np.log(tag_counts + n_tags)\n",
     "\n",
-    "print(emission_matrix)"
+    "print(emission_matrix.shape)"
    ]
   },
   {
@@ -231,6 +241,15 @@
     "vectorizer = TfidfVectorizer()\n",
     "X = vectorizer.fit_transform(ds['train']['text'])\n",
     "Y = ds['train']['label']\n",
+    "\n",
+    "# standardize the data using standard scaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "X = scaler.fit_transform(X,with_mean=False)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "print(X.shape)"
    ]
   },
@@ -250,10 +269,10 @@
     "X_test = vectorizer.transform(ds['test']['text'])\n",
     "Y_pred = SVM1.predict(X_test)\n",
     "\n",
-    "# calculate the accuracy of the classifier\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "accuracy = accuracy_score(ds['test']['label'], Y_pred)\n",
-    "print(accuracy)\n",
+    "# calculate the classification report\n",
+    "from sklearn.metrics import classification_report\n",
+    "print(\"Classification report\")\n",
+    "print(classification_report(ds['test']['label'], Y_pred))\n",
     "\n",
     "# calculate the confusion matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
@@ -267,6 +286,22 @@
    "metadata": {},
    "source": [
     "## Part 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def replace(sample):\n",
+    "    words = sample['text'].split()\n",
+    "    tags = viterbi(words, emission_matrix, transition_matrix)\n",
+    "#     sample['text'] = ' '.join([f'{word}/{list(dict.keys())[tag]}' for word, tag in zip(words, tags)])\n",
+    "    # concatenate the words and the tags to form the new text\n",
+    "    sample['text'] = \" \".join(words) + \" \" + \" \".join([list(dict.keys())[tag] for tag in tags])\n",
+    "    return sample\n"
    ]
   },
   {
